--- a/admin/resources/css/styles.css
+++ b/admin/resources/css/styles.css
@@ -1,3 +1,5 @@
+@import "admins.css";
+
 * {
     padding: 0px;
     margin: 0px;
@@ -23,7 +25,7 @@ html {
     margin-left: 15px;
 }
 
-body.admin-view {
+body {
     display: flex;
     flex-flow: row wrap;
 }
@@ -33,7 +35,15 @@ body.admin-view {
     margin-right: 1%;
 }
 
-.content {
+.section {
+    display: none;
+}
+
+.active{
+    display: block;
+}
+
+.container {
     width: 85%;
 }
 
