--- a/admin/resources/css/styles.css
+++ b/admin/resources/css/styles.css
@@ -1,5 +1,4 @@
 @import "admins.css";
-@import "login.css";
 
 * {
     padding: 0px;
@@ -26,12 +25,7 @@ html {
     margin-left: 15px;
 }
 
-/* #page {
-    display: flex;
-    flex-flow: row wrap;
-} */
-
-#fullpage {
+body {
     display: flex;
     flex-flow: row wrap;
 }
