--- a/admin/resources/css/styles.css
+++ b/admin/resources/css/styles.css
@@ -6,12 +6,12 @@
     box-sizing: border-box;
 }
 
-html {
+/* body {
     font-size: 20px;
     color: #5a5a5a;
     background-color: #ffffff;
     text-rendering: optimizeLegibility;
-}
+} */
 
 .mg-top-15px {
     margin-top: 15px;
@@ -25,10 +25,10 @@ html {
     margin-left: 15px;
 }
 
-body {
+/* body {
     display: flex;
     flex-flow: row wrap;
-}
+} */
 
 .nav-bar {
     width: 14%;
