--- a/FE GSP/templates/index.html
+++ b/FE GSP/templates/index.html
@@ -3,12 +3,12 @@
     <head>
         <meta charset="UTF-8">
         <title>Login</title>
-        <link rel="stylesheet" type="text/css" href="login.css">
+        <link rel="stylesheet" type="text/css" href="../static/css/login.css">
         <link rel="stylesheet" type="text/css" href="file:///D:/Web%20Projects/FE%20GSP/Library%20CSS/all.css">
-        <script src="Library jQuery/jquery-3.4.1.js"></script>
+        <script src="../static/app/3rdparty/jquery-3.4.1.js"></script>
         <script src="Library jQuery/sammy.js"></script>
-        <script src="controllers/SecurityController.js"></script>
-        <script src="controllers/AdminController.js"></script>
+        <script src="../static/app/controllers/SecurityController.js"></script>
+        <script src="../static/app/controllers/AdminController.js"></script>
         <script>
             const users = [
                     {
@@ -81,7 +81,7 @@
         </script>
     </head>
     <body>
-        <section id="login-page" class="page login-page">
+        <section id="login-page" class="page login-page active">
             <form id="box">
                 <h1 id="hello">LOGIN TO GSP GROUP</h1>
                 <div id="emailWrapper">
