Refactor FE code

--- a/FE GSP/templates/index.html
+++ b/FE GSP/templates/index.html
@@ -9,6 +9,7 @@
         <script src="Library jQuery/sammy.js"></script>
         <script src="../static/app/controllers/SecurityController.js"></script>
         <script src="../static/app/controllers/AdminController.js"></script>
+        <script src="../static/app/common/Starter.js"></script>
         <script>
             const users = [
                     {
@@ -27,57 +28,6 @@
                     { "email": "admin3@tech3s-mentor.com", "firstName": "AdminF3", "lastName": "L", "phone": "+84909123454" },
                     { "email": "admin4@tech3s-mentor.com", "firstName": "AdminF4", "lastName": "L", "phone": "+84909123455" }
                 ];
-        </script>
-        <script src="index.js"></script>
-        <script>
-            // $(function() {
-                
-            // })
-            var email = '';
-            var password = '';
-            var searchInput = '';
-            $(document).ready(function () {
-                    $('.page.login-page').show();
-
-                    $(document).on('click', ["data-action"], function (event) {
-                        //var action = event.getAttribute("data-action");
-                        //var action = $(this).data("action");
-                        //var action = $(this).data().action;
-                        event.preventDefault();
-                        var action = event.target.getAttribute("data-action");
-                        var controller = event.target.getAttribute('data-controller');
-
-                        console.log("Hello");
-                        console.log(controller);
-                        console.log(event.type);
-                        if (event.type === 'click') {
-                            if (action === 'Login') {
-                                if (controller === 'SecurityController') {
-                                    email = $('#emailInput').val();
-                                    password = $('#passwordInput').val();
-                                    SecurityController.login(users);
-                                }
-                            }
-                            else if (action === 'Logout') {
-                                if (controller === 'SecurityController') {
-                                    SecurityController.logout();
-                                }
-                            }
-                        }
-                    })
-                    $(document).on('keyup', ["data-action"], function(event) {
-                        var action = event.target.getAttribute("data-action");
-                        var controller = event.target.getAttribute('data-controller');
-                        if(event.type === 'keyup') {
-                            if(action === 'Search') {
-                                if(controller === 'AdminController') {
-                                    searchInput = $('#searchInput').val().toLowerCase();
-                                    AdminController.search();
-                                }
-                            }
-                        }
-                    })
-                })
         </script>
     </head>
     <body>
