--- a/css/index.css
+++ b/css/index.css
@@ -1,10 +1,6 @@
-@import "admins.css";
-
-/* * {
-    padding: 0px;
-    margin: 0px;
-    box-sizing: border-box;
-} */
+html, body {
+    margin: 0%;
+}
 
 .body2 {
     font-size: 20px;
@@ -26,10 +22,10 @@
     margin-left: 15px;
 }
 
-body {
+/* body {
     display: flex;
     flex-flow: row wrap;
-}
+} */
 
 .nav-bar {
     width: 14%;
